<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="itemtype">ItemType</string>
    <string name="quantity">quantity</string>
    <string name="remove">remove</string>
    <string name="add">Add</string>
    <string name="plus_button">plus button</string>
    <string name="minus_button">minus button</string>
    <string name="delete_button">delete button</string>
    <string name="name">Name</string>
</resources>